--- a/week1/index.html
+++ b/week1/index.html
@@ -1,1 +1,16 @@
-hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="public/css/stylesV2.css">
+ <title>API</title>
+</head>
+<body>
+
+
+<div class="root"></div>
+
+ <script type="text/javascript" src="public/js/Schiphol.js"></script>
+
+</body>
