refactured to object literals

--- a/week1/index.html
+++ b/week1/index.html
@@ -11,6 +11,7 @@
 
 <div class="root"></div>
 
- <script type="text/javascript" src="public/js/Schiphol.js"></script>
+ <script type="text/javascript" src="public/js/routie.js"></script>
+ <script type="text/javascript" src="public/js/Schiphol-lotto-v2.js"></script>
 
 </body>
