broke everything trying template enige

--- a/week1/index.html
+++ b/week1/index.html
@@ -13,5 +13,6 @@
 
  <script type="text/javascript" src="public/js/routie.js"></script>
  <script type="text/javascript" src="public/js/Schiphol-lotto-v2.js"></script>
+ <script src="public/js/transparency.js"></script>
 
 </body>
