--- a/week1/index.html
+++ b/week1/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="public/css/stylesV2.css">
- <title>API</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="public/css/stylesV2.css">
+  <title>API</title>
 </head>
-<body>
 
+<div class="root">
+  <div data-container="container"></div>
+</div>
 
-<div class="root"></div>
-
- <script type="text/javascript" src="public/js/routie.js"></script>
- <script type="text/javascript" src="public/js/Schiphol-lotto-v2.js"></script>
- <script src="public/js/transparency.js"></script>
+<script type="text/javascript" src="public/js/routie.js"></script>
+<script type="text/javascript" src="public/js/Schiphol-lotto-v2.js"></script>
+<script src="public/js/transparency.js"></script>
 
 </body>
